--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  intl: ^0.18.0
   flutter_bloc: ^8.1.2
   bloc: ^8.1.1
   modal_progress_hud_nsn: ^0.3.0
